Use Path.of() instead of Paths.get()
Path.of() makes Paths.get() obsolete in Java 11

Change-Id: Ibc94041804c1cc27f6517165881ab5b686bcfafc
Signed-off-by: Edwin Kempin <ekempin@google.com>
Reviewed-on: https://gerrit-review.googlesource.com/c/plugins/code-owners/+/405982
Tested-by: Zuul <zuul-63@gerritcodereview-ci.iam.gserviceaccount.com>
Reviewed-by: Nitzan Gur-Furman <nitzan@google.com>