@@ -27,7 +27,7 @@ import com.google.gerrit.entities.BranchNameKey;
 import com.google.gerrit.entities.RefNames;
 import com.google.gerrit.plugins.codeowners.acceptance.AbstractCodeOwnersTest;
 import com.google.gerrit.plugins.codeowners.acceptance.testsuite.CodeOwnerConfigOperations;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.eclipse.jgit.junit.TestRepository;
 import org.eclipse.jgit.lib.Ref;
 import org.eclipse.jgit.lib.Repository;
@@ -159,7 +159,7 @@ public class CodeOwnerConfigScannerTest extends AbstractCodeOwnersTest {
     // Verify that we received the expected callbacks for the invalid code onwer config.
     Mockito.verify(invalidCodeOwnerConfigCallback)
         .onInvalidCodeOwnerConfig(
-            eq(Paths.get("/OWNERS")), any(InvalidCodeOwnerConfigException.class));
+            eq(Path.of("/OWNERS")), any(InvalidCodeOwnerConfigException.class));
     verifyNoMoreInteractions(invalidCodeOwnerConfigCallback);
   }
 
@@ -190,7 +190,7 @@ public class CodeOwnerConfigScannerTest extends AbstractCodeOwnersTest {
     // Verify that we received the expected callbacks for the invalid code onwer config.
     Mockito.verify(invalidCodeOwnerConfigCallback)
         .onInvalidCodeOwnerConfig(
-            eq(Paths.get("/OWNERS")), any(InvalidCodeOwnerConfigException.class));
+            eq(Path.of("/OWNERS")), any(InvalidCodeOwnerConfigException.class));
     verifyNoMoreInteractions(invalidCodeOwnerConfigCallback);
   }
 
